Implement BottomSheet Sorting (Demo)

--- a/app/src/main/res/layout/app_bar_supervisor_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_supervisor_dashboard.xml
@@ -27,7 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:borderWidth="0dp"
+        app:srcCompat="@drawable/ic_add_white_24dp"
+        android:backgroundTint="@color/dark_gray"/>
 
     <include layout="@layout/content_supervisor_dashboard" />
 
