1. add fragments for navigation menu. 2. change menu icons of the navigation menu. 3. change the UI of the nav view. 4. Implement rounded image view with card view in nav view header. 5. add TextDrawble library to display the initial letter of the name with some background color if the employee profile is not available. 6. add filter icon in the toolbar.

--- a/app/src/main/res/layout/activity_worker_dashboard.xml
+++ b/app/src/main/res/layout/activity_worker_dashboard.xml
@@ -18,8 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/dark_gray"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_worker_dashboard"
-        app:menu="@menu/activity_worker_dashboard_drawer" />
+        app:itemTextColor="@android:color/white"
+        app:menu="@menu/activity_worker_dashboard_drawer">
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
