--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#f8b500</color>
     <color name="gray">#5c636e</color>
     <color name="dark_gray">#393e46</color>
+    <color name="edit_text_stroke_color">#D3D0D0</color>
     <color name="success">#00FF00</color>
     <color name="failure">#FF0000</color>
     <color name="warning">#f8b500</color>
