--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -4,86 +4,112 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.NewProjectActivity"
-    android:padding="20dp">
+    tools:context=".activities.NewProjectActivity">
 
-    <TextView
-        android:id="@+id/title_project_name"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/toolbar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/lexenddeca"
-        android:paddingTop="20dp"
-        android:paddingBottom="0dp"
-        android:text="Add Project"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="@color/dark_gray"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/project_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Project Name*"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp"
-        android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@id/title_project_name"/>
-    <EditText
-        android:id="@+id/project_budget"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Project Budget*"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp"
-        android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@id/project_name"/>
-    <EditText
-        android:id="@+id/project_start_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Project Start Date*"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp"
-        android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@id/project_budget"/>
-    <EditText
-        android:id="@+id/project_due_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Project Due Date*"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp"
-        android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@id/project_start_date"/>
-    <EditText
-        android:id="@+id/project_additional_details"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Additional Details"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp"
-        android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@id/project_due_date"/>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ToolbarColoredIcon"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <Button
-        android:id="@+id/btn_next"
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/colorAccent"
-        android:padding="0dp"
-        android:text="Next"
-        app:layout_constraintTop_toBottomOf="@+id/project_additional_details"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="20dp">
+        <TextView
+            android:id="@+id/title_project_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/lexenddeca"
+            android:paddingTop="20dp"
+            android:paddingBottom="0dp"
+            android:text="Add Project"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/dark_gray"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <EditText
+            android:id="@+id/project_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Project Name*"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="20dp"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/title_project_name"/>
+        <EditText
+            android:id="@+id/project_budget"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Project Budget*"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="20dp"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/project_name"/>
+        <EditText
+            android:id="@+id/project_start_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Project Start Date*"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="20dp"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/project_budget"/>
+        <EditText
+            android:id="@+id/project_due_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Project Due Date*"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="20dp"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/project_start_date"/>
+        <EditText
+            android:id="@+id/project_additional_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Additional Details"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="20dp"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/project_due_date"/>
+
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/colorAccent"
+            android:padding="0dp"
+            android:text="Next"
+            app:layout_constraintTop_toBottomOf="@+id/project_additional_details"
+            app:layout_constraintStart_toStartOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
