--- a/app/src/main/res/layout/activity_new_project_select_worker.xml
+++ b/app/src/main/res/layout/activity_new_project_select_worker.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewProjectSelectWorkerActivity">
+    tools:context=".activities.NewProjectSelectWorkerActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/toolbar1"
