--- a/app/src/main/res/layout/activity_worker_profile.xml
+++ b/app/src/main/res/layout/activity_worker_profile.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -41,17 +41,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_photo"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView"
                     android:layout_width="148dp"
                     android:layout_height="148dp"
-                    app:civ_border_width="0dp"
-                    android:layout_marginTop="40dp"
+                    app:cardCornerRadius="124dp"
+                    android:layout_gravity="center"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:src="@drawable/photographer_profile"/>
+                    app:layout_constraintEnd_toEndOf="parent">
+                    <ImageView
+                        android:id="@+id/profile_photo"
+                        android:layout_width="148dp"
+                        android:src="@drawable/photographer_profile"
+                        android:scaleType="centerCrop"
+                        android:layout_height="148dp" />
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/tv_emp_id"
@@ -64,7 +69,7 @@
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/profile_photo" />
+                    app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
                 <TextView
                     android:id="@+id/emp_name"
