1. add laws menu icon in the navigation. 2. add worker laws fragment 3. define worker laws.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,4 +35,9 @@
         android:name="com.ashstudios.safana.ui.projectstatus.ProjectStatusFragment"
         tools:layout="@layout/fragment_project_status" />
 
+    <fragment
+        android:id="@+id/nav_worker_laws"
+        android:name="com.ashstudios.safana.ui.laws.WorkerLawsFragment"
+        tools:layout="@layout/fragment_worker_laws" />
+
 </navigation>
