--- a/app/src/main/res/menu/activity_worker_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_worker_dashboard_drawer.xml
@@ -27,8 +27,15 @@
             android:title="@string/allowances" />
 
         <item
+            android:id="@+id/nav_worker_laws"
+            android:title="@string/laws"
+            android:icon="@drawable/ic_laws"/>
+
+
+        <item
             android:id="@+id/nav_project_status"
             android:title="@string/current_project"
             android:icon="@drawable/ic_project_status"/>
+
     </group>
 </menu>
