--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#393e46</color>
     <color name="colorAccent">#f8b500</color>
+    <color name="background_gray">#80E7E7E7</color>
     <color name="gray">#5c636e</color>
     <color name="dark_gray">#393e46</color>
 </resources>
