--- a/app/src/main/res/layout/fragment_bottom_sheet_sort_leave.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_sort_leave.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BottomSheetSortLeaveFragment">
+    tools:context=".Fragments.BottomSheetSortLeaveFragment">
     <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
