--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,22 +18,16 @@
         tools:layout="@layout/fragment_project_details" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.ashstudios.safana.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_allowance_management"
+        android:name="com.ashstudios.safana.ui.allowance_management.AllowanceManagementFragment"
+        android:label="@string/allowance_management"
+        tools:layout="@layout/fragment_allowance_management" />
 
     <fragment
         android:id="@+id/nav_tools"
         android:name="com.ashstudios.safana.ui.tools.ToolsFragment"
         android:label="@string/menu_tools"
         tools:layout="@layout/fragment_tools" />
-
-    <fragment
-        android:id="@+id/nav_share"
-        android:name="com.ashstudios.safana.ui.share.ShareFragment"
-        android:label="@string/menu_share"
-        tools:layout="@layout/fragment_share" />
 
     <fragment
         android:id="@+id/nav_leave_management"
