1. change UI icons in nav view. 2. add tasks fragment.

--- a/app/src/main/res/menu/activity_supervisor_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_supervisor_dashboard_drawer.xml
@@ -6,24 +6,24 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_worker"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_employee"
             android:title="@string/menu_worker_details" />
         <item
             android:id="@+id/nav_project_details"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_project_details"
             android:title="@string/menu_project_details" />
         <item
             android:id="@+id/nav_leave_management"
-            android:icon="@drawable/ic_menu_send"
+            android:icon="@drawable/ic_leave"
             android:title="@string/leave_management" />
         <item
             android:id="@+id/nav_allowance_management"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_allowances"
             android:title="@string/allowance_management" />
         <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:id="@+id/nav_tasks"
+            android:icon="@drawable/ic_tasks"
+            android:title="@string/tasks" />
     </group>
 
 </menu>
