--- a/app/src/main/res/layout/rv_task_model.xml
+++ b/app/src/main/res/layout/rv_task_model.xml
@@ -10,11 +10,11 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="268dp"
-        android:layout_height="30dp"
+        android:layout_width="271dp"
+        android:layout_height="39dp"
         android:layout_marginStart="16dp"
-        android:fontFamily="@font/lexenddeca"
-        android:textSize="15sp"
+        android:textColor="@color/dark_gray"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,6 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:textSize="16sp"
+        android:textColor="@color/dark_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
