--- a/app/src/main/res/layout/fragment_project_status.xml
+++ b/app/src/main/res/layout/fragment_project_status.xml
@@ -86,7 +86,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="16dp"
-                android:paddingTop="15dp"
+                android:paddingTop="30sp"
                 android:paddingBottom="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
