1. Add task details activity. 2. add bottom sheet in the supervisor and worker tasks fragment.
Co-authored-by: iamrohitsuthar <iamrohitsuthar@gmail.com>

--- a/app/src/main/res/menu/activity_supervisor_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_supervisor_dashboard_drawer.xml
@@ -21,7 +21,7 @@
             android:icon="@drawable/ic_allowances"
             android:title="@string/allowance_management" />
         <item
-            android:id="@+id/nav_tasks"
+            android:id="@+id/nav_sup_tasks"
             android:icon="@drawable/ic_tasks"
             android:title="@string/tasks" />
     </group>
