--- a/app/src/main/res/navigation/mobile_navigation_supervisor.xml
+++ b/app/src/main/res/navigation/mobile_navigation_supervisor.xml
@@ -24,7 +24,7 @@
         tools:layout="@layout/fragment_allowance_management" />
 
     <fragment
-        android:id="@+id/nav_tasks"
+        android:id="@+id/nav_sup_tasks"
         android:name="com.ashstudios.safana.ui.tasks.TasksFragment"
         android:label="Tasks"
         tools:layout="@layout/fragment_tasks" />
