--- a/app/src/main/res/layout/activity_worker_dashboard.xml
+++ b/app/src/main/res/layout/activity_worker_dashboard.xml
@@ -23,7 +23,29 @@
         app:headerLayout="@layout/nav_header_worker_dashboard"
         app:itemTextColor="@android:color/white"
         app:menu="@menu/activity_worker_dashboard_drawer">
-
+        <LinearLayout
+        android:id="@+id/ll_logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp">
+        <ImageView
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_power_button"
+            android:paddingStart="5dp"
+            android:tint="@color/colorPrimary"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginStart="20dp"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:paddingStart="10dp"
+            android:text="@string/logout"/>
+    </LinearLayout>
     </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
